# sparkdantic

./: .buildinfo  .pre-commit-config.yaml  LICENSE  Makefile  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/: pull_request_template.md  release.yml
.github/workflows/: ci.yml  documentation.yml
_modules/: index.html
_modules/sparkdantic/: logger.html  models.html  spark_types.html
_sources/sparkdantic/: spark_types.rst.txt
docs/source/: conf.py  index.rst  src.rst
docs/source/api/: logger.rst  models.rst  spark_types.rst
docs/source/examples/: advanced_features.rst  basic_usage.rst
docs/source/sparkdantic/: logger.rst
examples/: advanced_features.html  basic_usage.html
sparkdantic/: logger.html  models.html  spark_types.html
src/: logger.py  models.py  spark_types.py
src/sparkdantic/: __init__.py  logger.py  models.py  spark_types.py
tests/: conftest.py  test_logger.py  test_models.py
